<resources>
    <string name="app_name">AndroidSummitSampleApp</string>

    <!-- API Menu Item Titles -->
    <string name="nessie_title">Nessie</string>
    <string name="cardio_title">Card.IO</string>
    <string name="firebase_messaging_title">Firebase Messaging</string>
    <string name="firebase_authui_title">Firebase Auth UI</string>
    <string name="firebase_database_title">Firebase Database</string>

    <!-- Nessie -->
    <string name="nessie_create_customers">Register as a new customer</string>
    <string name="nessie_customers">Get Customers</string>
    <string name="nessie_deposit">Create Deposit</string>
    <string name="nessie_create_account">Create Account</string>
    <string name="customer_first_name">"First Name: "</string>
    <string name="customer_last_name">"Last Name: "</string>
    <string name="nessie_customers_header">Retrieve a List of Customers</string>
    <string name="amount_hint">Enter Amount...</string>
    <string name="description_hint">Enter Description...</string>
    <string name="medium_hint">Enter Medium...</string>

    <string-array name="medium_spinner_options">
        <item>Select Medium...</item>
        <item>balance</item>
        <item>rewards</item>
    </string-array>

    <!-- Sign up -->
    <string name="profile_title">My Profile</string>
    <string name="login_tab_name">Log in</string>
    <string name="signup_tab_name">Sign up</string>
    <string name="login_signup_email">Email</string>
    <string name="login_signup_password">Password</string>
    <string name="login_signup_confirm_password">Confirm Password</string>
    <string name="signup_first_name">First Name</string>
    <string name="signup_last_name">Last Name</string>
    <string name="signup_button">Sign up</string>
    <string name="signup_street_number">Street number</string>
    <string name="signup_street_name">Street name</string>
    <string name="signup_city">City</string>
    <string name="signup_state">State</string>
    <string name="signup_zip">Zip</string>
    <string name="login_button">Log in</string>

    <string name="signup_first_name_empty">First name cannot be empty.</string>
    <string name="signup_last_name_empty">Last name cannot be empty.</string>
    <string name="signup_street_number_empty">Street number cannot be empty.</string>
    <string name="signup_street_name_empty">Street name cannot be empty.</string>
    <string name="signup_city_empty">City cannot be empty.</string>
    <string name="signup_state_empty">State cannot be empty.</string>
    <string name="signup_zip_empty">Zip cannot be empty.</string>

    <string name="signup_success_message">Successfully created the user</string>
    <string name="signup_failure_message">Failed to create the user</string>

    <!-- Account Info -->
    <string name="account_current_balance">Current Balance</string>
    <string name="account_reward_balance">Reward Balance</string>

    <!-- Create New Account -->
    <string name="new_account_type">Account Type</string>
    <string name="new_account_nickname">Nickname</string>

    <!-- Card.IO -->
    <string name="launch_cardio_scanner">Launch Scanner</string>

    <!-- Firebase Auth -->
    <string name="firebase_auth_sign_in">Sign In</string>
    <string name="firebase_auth_sign_out">Sign Out</string>
    <string name="signed_in_status">Signed in as:</string>
    <string name="signed_out_status">Signed out.</string>
    <string name="auth_placeholder">-----</string>

    <!-- Firebase Messaging -->
    <string name="messaging_setup_instructions"><![CDATA[
        <h3>
            To send Firebase Messaging notifications to this app:
        </h3>
        <p>
            1. Add this sample app to your account on <a href=\"http://firebase.google.com\">firebase.google.com</a>
        </p>
        <p>
            2. Generate google-services.json file and add it to this sample app.  Instructions on setup can be found
            <a href=\"https://firebase.google.com/docs/android/setup\">here</a>.
        </p>
        <p>
            3. Send a notification to the app using the Firebase console.  This app is already setup to handle background and foreground
            notifications. See ExampleMessagingService in this app for foreground notification handling.
        </p>
        <p>
            If you still cannot receive messages, make sure you have the latest Google Play Services and Google Repository SDKs.
        </p>]]>
    </string>

    <!-- Firebase Database -->
    <string name="first_name_hint">Enter First Name...</string>
    <string name="last_name_hint">Enter Last Name...</string>
    <string name="firebase_save_customer">Save Customer</string>

</resources>
